--- a/CSS/index.css
+++ b/CSS/index.css
@@ -219,7 +219,7 @@ body {
     /* Color del texto */
 }
 
-.presentar {
+.section {
   display: flex;
   align-items: center;
   justify-content: center;
