--- a/CSS/bloque.css
+++ b/CSS/bloque.css
@@ -71,7 +71,9 @@ button:hover {
   margin-top: 20px;
   font-weight: bold;
 }
-
+#resultados  {
+  color: #ffff;
+}
 
 #imagenBloqueSolido,
 #imagenBloqueHueco {
